--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="background">#CC0000</color>
+    <color name="colorbutton">#990000</color>
+    <color name="borderbutton">#ffffff</color>
+    <color name="white">#ffffff</color>
 </resources>
