--- a/app/src/main/res/layout/activity_ranking.xml
+++ b/app/src/main/res/layout/activity_ranking.xml
@@ -2,8 +2,33 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
     android:background="@color/background">
-<TextView
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="2"
+        android:id="@+id/layout1"
+        >
+      <ImageButton
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:layout_weight="1"
+          android:src="@drawable/album_top"
+          android:id="@+id/btnRankingArtist"
+          android:background="@color/colorbutton"
+          />
+        <ImageButton
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:src="@drawable/single_top"
+            android:id="@+id/btnRankingSong"
+            android:background="@color/colorbutton"
+            />
+    </LinearLayout>
+<ListView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:text="Ranking"/>
+    android:layout_marginTop="10dp"
+    android:layout_below="@+id/layout1"
+    android:id="@+id/lvRanking"></ListView>
 </RelativeLayout>
