--- a/app/src/main/res/layout/activity_searching.xml
+++ b/app/src/main/res/layout/activity_searching.xml
@@ -1,5 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
-
+    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:background="@color/background">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="10dp"
+    android:layout_marginLeft="20dp"
+    android:layout_marginRight="20dp"
+    android:id="@+id/layoutSearch"
+    >
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:drawableLeft="@drawable/search"
+        android:background="@drawable/editborder"
+        android:id="@+id/edSearch"/>
+</LinearLayout>
+<ListView
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"
+    android:layout_below="@+id/layoutSearch"
+    android:id="@+id/lvSearch"
+    android:layout_marginTop="10dp"></ListView>
 </RelativeLayout>
