--- a/app/src/main/res/layout/activity_playlist.xml
+++ b/app/src/main/res/layout/activity_playlist.xml
@@ -5,40 +5,34 @@
     >
 <LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="@dimen/width_button"
     android:background="@color/colorbutton"
     android:id="@+id/layoutButton"
     android:weightSum="2">
     <Button
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/width_button"
         android:layout_weight="1"
         android:id="@+id/btnAllPlay"
-       android:layout_marginLeft="30dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
         android:background="@color/colorbutton"
         android:drawableLeft="@drawable/repeat"
         android:text="@string/allplay"
         android:textColor="@color/white"
         android:textAllCaps="false"
+        android:layout_marginLeft="40dp"
 
         />
     <Button
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/width_button"
         android:layout_weight="1"
         android:id="@+id/btnShuffle"
-        android:layout_marginRight="30dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginBottom="10dp"
         android:background="@color/colorbutton"
         android:drawableLeft="@drawable/shuffle"
         android:text="@string/shufle"
         android:textAllCaps="false"
-        android:textColor="@color/white"/>
+        android:textColor="@color/white"
+        android:layout_marginRight="40dp"/>
 </LinearLayout>
     <ListView
         android:layout_width="match_parent"
