--- a/app/src/main/res/layout/activity_rankingdetail.xml
+++ b/app/src/main/res/layout/activity_rankingdetail.xml
@@ -4,7 +4,7 @@
     android:background="@color/background">
 <LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="50dp"
+    android:layout_height="@dimen/width_button"
     android:weightSum="3"
     android:background="@color/colorbutton"
     android:id="@+id/layoutButton"
