--- a/app/src/main/res/layout/player_activity.xml
+++ b/app/src/main/res/layout/player_activity.xml
@@ -4,7 +4,7 @@
     android:background="@color/background">
 <com.google.android.youtube.player.YouTubePlayerView
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="@dimen/width_video"
     android:id="@+id/player_view"
     ></com.google.android.youtube.player.YouTubePlayerView>
     <LinearLayout
@@ -15,42 +15,46 @@
         >
        <LinearLayout
            android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:layout_weight="2"
+           android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
+           android:weightSum="2"
 
            >
            <ImageButton
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
+               android:layout_width="@dimen/player_item"
+               android:layout_height="@dimen/player_item"
                android:id="@+id/btnBack"
                android:src="@drawable/start"
                android:background="@color/background"
-               android:layout_weight="1"/>
+               android:scaleType="fitCenter"
+               android:layout_weight="1"
+             />
            <ImageButton
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
+               android:layout_width="@dimen/player_item"
+               android:layout_height="@dimen/player_item"
                android:id="@+id/btnNext"
                android:src="@drawable/end"
                android:background="@color/background"
+               android:scaleType="fitCenter"
                android:layout_weight="1"
                />
 
        </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="100dp"
             android:weightSum="1"
             >
             <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/player_item"
+                android:layout_height="@dimen/player_item"
                 android:src="@drawable/plus"
                 android:background="@color/background"
                 android:id="@+id/btnPlus"
                 android:layout_weight="1"
-                android:gravity="center"/>
+                android:gravity="center"
+                android:scaleType="fitCenter"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -60,11 +64,12 @@
             android:layout_marginRight="10dp"
             >
             <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/player_item"
+                android:layout_height="@dimen/player_item"
                 android:src="@drawable/play"
                 android:background="@color/background"
                 android:id="@+id/btnPlay"
+                android:scaleType="fitCenter"
                 />
             <SeekBar
                 android:layout_width="match_parent"
