--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,8 +3,10 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="background">#CC0000</color>
+    <color name="background">#BB0000</color>
     <color name="colorbutton">#990000</color>
     <color name="borderbutton">#ffffff</color>
     <color name="white">#ffffff</color>
+    <color name="backgroundtab">#111111</color>
+
 </resources>
