--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,8 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="textsize_actionbar">20dp</dimen>
+    <dimen name="width_button">50dp</dimen>
+    <dimen name="width_video">150dp</dimen>
+    <dimen name="player_item">30dp</dimen>
 </resources>
